--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,3 +1,6 @@
+@import url('popup__input_type_error.css');
+@import url('popup__input-error-text.css');
+
 .popup__input {
   width: 100%;
   height: 47px;
