--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,40 @@
 .profile__image {
   width: 120px;
   height: 120px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+  position: relative;
+  transition: background-color 0.2s;
+  cursor: pointer;
+}
+
+.profile__image::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background-color: transparent;
+  transition: background-color 0.2s;
+}
+.profile__image:hover::before {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.profile__image::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: url('../../../images/edit-icon.svg') center no-repeat;
+  background-size: 20px;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+
+.profile__image:hover::after {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
